Update copyright year

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Fighthaven</p>
+        <p>&copy; {{ year }} Fighthaven</p>
     </footer>
 </body>
 </html>
