--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
         <div id="events-container">Loading events...</div>
     </main>
     <footer>
-        <p>&copy; 2024 Fighthaven</p>
+        <p>&copy; {{ year }} Fighthaven</p>
     </footer>
 </body>
 </html>
