--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="next-event-container"></div>
     </main>
     <footer>
-        <p>&copy; 2024 Fighthaven</p>
+        <p>&copy; {{ year }} Fighthaven</p>
     </footer>
 </body>
 
